# spirv-reflect-sharp

./: .gitmodules  LICENSE  README.md  build-native.cmd  pbr.spv  pbr_khr.frag  test0.spv
SpirvReflectSharp/: SpirvReflectSharp.sln
SpirvReflectSharp/SpirvReflectSharp/: ReflectBlockVariable.cs  ReflectDescriptorBinding.cs  ReflectEntryPoint.cs  ReflectInterfaceVariable.cs  ReflectStructs.cs  ReflectTypeDescription.cs  ShaderModule.cs  SpirvReflect.cs  SpirvReflectEnums.cs  SpirvReflectException.cs  SpirvReflectNative.cs  SpirvReflectSharp.csproj  SpirvReflectUtils.cs
SpirvReflectSharp/SpirvReflectSharp.Tests/: Program.cs  SpirvReflectSharp.Tests.csproj
cspirv-reflect/: .gitignore  CMakeLists.txt  cspirv_reflect.h  setup.cmd
cspirv-reflect/tests/glsl/: input_attachment.spv.yaml  texel_buffer.spv.yaml
cspirv-reflect/tests/hlsl/: append_consume.spv.yaml  binding_array.spv.yaml  binding_types.spv.yaml  counter_buffers.spv.yaml
